force-app/main/default/objects/aecm__Program_Project_Budget__c/aecm__Program_Project_Budget__c.object-meta.xml
<CustomObject>
    <description>Budget object for a Tempest project.</description>
    <label>Program Project Budget</label>
    <nameField>
        <displayFormat>B-{000}</displayFormat>
        <label>Program Project Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Project Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>