force-app/main/default/objects/aecm__Program_Project_Budget__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>