force-app/main/default/objects/aecm__Program_Project_Budget__c/fields/aecm__Program_Project__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program_Project__c</fullName>
    <label>Program Project</label>
    <referenceTo>aecm__Program_Project__c</referenceTo>
    <relationshipLabel>Program Project Budgets</relationshipLabel>
    <relationshipName>Program_Project_Budgets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>