force-app/main/default/objects/aecm__Program_Project_Budget__c/fields/aecm__Total__c.field-meta.xml
<CustomField>
    <fullName>aecm__Total__c</fullName>
    <label>Total</label>
    <summarizedField>aecm__Program_Project_Budget_Line__c.aecm__Total__c</summarizedField>
    <summaryForeignKey>aecm__Program_Project_Budget_Line__c.aecm__Program_Project_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>